# Kelvinator-DNA

./: .gitignore  PROTOCOL.md  README.md  pyproject.toml
broadlink_api/: __init__.py  examples.py  network_api.py
examples/: control_ac.py
kelvinator_dna/: __init__.py  commands.py  device.py  protocol.py  so_bridge.py
tests/: test_crypto.py  test_network_api.py  test_protocol.py
