[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "kelvinator-dna"
version = "0.1.0"
description = "Reverse-engineered Python library for controlling Kelvinator/Electrolux AC units via BroadLink DNA protocol"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["kelvinator", "electrolux", "broadlink", "aircon", "ac", "home-automation", "iot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
]

dependencies = [
    "pycryptodome>=3.19.0",
]

[project.urls]
Homepage = "https://github.com/example/kelvinator-dna"
Repository = "https://github.com/example/kelvinator-dna"

[project.scripts]
kelvinator-cli = "kelvinator_dna.cli:main"

[tool.setuptools.packages.find]
include = ["kelvinator_dna*"]
