[project]
name = "broadlink-api"
version = "2.0.49"
description = "Python reimplementation of Broadlink DNA SDK libNetworkAPI.so"
requires-python = ">=3.8"
dependencies = [
    "cryptography>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
